get vuejs from npm

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "homepage": "https://github.com/restimel/dependencyWatcher",
   "dependencies": {
     "argparse": "^1.0.9",
-    "font-awesome": "^4.7.0"
+    "font-awesome": "^4.7.0",
+    "vue": "^2.5.13"
   }
 }
