Move the filter help from right panel to the dialog
In right panel, there was not enough space to display the help
correctly. So it was not useful because it was very hard to read.

Now, the help is displayed in the dialog in a <details> section.

When the filter dialog is open, it now displays the Workspace section in
right panel as it is more related.

--- a/configuration.json
+++ b/configuration.json
@@ -49,6 +49,8 @@
                 "pattern": "\\.js$"
             }, {
                 "pattern": "\\.html$"
+            }, {
+                "pattern": "\\.css$"
             }]
         },
         "fileNameAdapter": [{
@@ -85,6 +87,17 @@
                 "writeFile": "password"
             }
         }, {
+            "name": "css",
+            "matcher": {
+                "pattern": ".css"
+            },
+            "color": "#f0f10f",
+            "bgColor": "#dce0ce",
+            "rights": {
+                "readFile": true,
+                "writeFile": "password"
+            }
+        }, {
             "name": "libs",
             "matcher": {
                 "pattern": "/libs/"
@@ -100,7 +113,10 @@
             "pattern": "require\\(['\"]((?:\\\\.|.)+?)['\"]\\)",
             "flags": "g"
         }, {
-            "pattern": "<script src=\"(.*?)\"></script>",
+            "pattern": "<script\\s[^>]*src=\"(.*?)\"></script>",
+            "flags": "g"
+        }, {
+            "pattern": "<link\\s[^>]*href=\"(.*?)\">",
             "flags": "g"
         }],
         "requireNameAdapter": [{
